# CMakeCheatSheet

./: .gitignore  LICENSE  README.md
Example1/: CMakeLists.txt
Example1/source/: collector.cpp  kek.h  main.cpp  main_1.cpp
Example10/: CMakeLists.txt  configure_sample.txt
Example11/: CMakeLists.txt  main.cpp  version_manager.h.in
Example2/: CMakeLists.txt
Example3/: CMakeLists.txt
Example3/source/: main.cpp
Example3/source/dir_collect/: CMakeLists.txt  collector.cpp  collector.h
Example3/source/dir_include_directive_example/: cmake_script.cmake
Example3/source/dir_kek/: CMakeLists.txt  kek.cpp
Example3/source/dir_lol/: CMakeLists.txt  lol.cpp  lol.h
Example3/source/dir_var_example/: CMakeLists.txt
Example4/functions_example/: CMakeLists.txt  cmake_functions.cmake
Example4/generator_expressions/: CMakeLists.txt
Example4/modules/: CMakeLists.txt
Example4/policies/: CMakeLists.txt
Example4/properties_example/: CMakeLists.txt
Example5/: CMakeLists.txt
Example6/: CMakeLists.txt
Example6/source/: main.cpp
Example7/: CMakeLists.txt  main.cpp
Example9/: CMakeLists.txt  exec_proc_example.sh  main.cpp
